--- a/views/show.ejs
+++ b/views/show.ejs
@@ -5,6 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= dc_title %></title>
+    <script
+      src="https://www.blueletterbible.org/assets/scripts/blbToolTip/BLB_ScriptTagger-min.js"
+      type="text/javascript">
+    </script>
+    <script type="text/javascript">
+      // Additional settings
+      BLB.Tagger.Translation = 'ESV';
+      BLB.Tagger.HyperLinks = 'all'; // 'all', 'none', 'hover'
+      BLB.Tagger.HideTanslationAbbrev = false;
+      BLB.Tagger.TargetNewWindow = true;
+      BLB.Tagger.Style = 'par'; // 'line' or 'par'
+      BLB.Tagger.NoSearchTagNames = ''; // HTML element list
+      BLB.Tagger.NoSearchClassNames = 'noTag doNotTag'; // CSS class list
+    </script>
 </head>
 <body>
     <%- topic.sanitizedHtml %>
